--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://github.com/byt3exec/hsbc-security-transfer/index.html', 'https://github.com/byt3exec/hsbc-security-transfer/index-2.html', 'https://github.com/byt3exec/hsbc-security-transfer/PhishingAwarenessGame.html']
+custom: ['byt3exec.github.io/hsbc-security-transfer/', 'byt3exec.github.io/hsbc-security-transfer/index-2.html', 'byt3exec.github.io/hsbc-security-transfer/PhishingAwarenessGame.html']
